# databank

./: Cargo.toml  Dockerfile  README.md
cd/: Cargo.toml
frontend/: package-lock.json  package.json
frontend/components/: Inventory.tsx  Login.tsx
frontend/components/ui/: FetchItems.tsx  ItemCard.tsx
frontend/pages/: _app.tsx  index.tsx  theme.tsx
src/: main.rs
src/server_functions/: functions.rs  mod.rs
