[package]
name = "databank"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
anyhow = "1.0.89"
bcrypt = "0.15.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["blocking", "json", "multipart", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
